syntax = "proto3";

package helloworld;

service LinearRegression {
  rpc TrainModel (TrainModelRequest) returns (stream TrainModelResponse);
}

message TrainModelRequest {
  repeated float features = 1;
  repeated float weights = 2;
  float label = 3;
}

message TrainModelResponse {
  float loss = 1;
  repeated float updated_weights = 2;
}

